La mise en forme de certaine partie avec la creaion d'une nouvelle classe Authentification pour bien organiser le code