@@ -6,6 +6,7 @@ import Principale.Historique;
 
 import java.time.LocalDate;
 import java.util.ArrayList;
+import java.util.InputMismatchException;
 import java.util.List;
 import java.util.Scanner;
 
@@ -29,52 +30,67 @@ public class EspaceAgent {
                 connected.add(agent);
                 Agent agentConnected = new Agent(agentID,agent.getNom(),agent.getPrenom(), agent.getEmail());
 
-                System.out.println("******************************\nBienvenue Agent " + connected.getFirst().getPrenom()+" "+ connected.getFirst().getNom() + " !******************************");
+                System.out.println("****************************** Bienvenue Agent " + connected.getFirst().getPrenom()+" "+ connected.getFirst().getNom() + " !******************************");
                 Historique tour = agentConnected.voirTourProchaine(agentID,admin);
                 if (tour!=null){
                     System.out.println("Votre prochain tour est prevu pour : "+ tour.getDateRotation());
+                    agentConnected.rappelSiProcheTour(admin);
                 }else {
                     System.out.println("**********Vous n'avez pas de tour prevu pour l'instant.***********");
                 }
-                agentConnected.rappelSiProcheTour(admin);
                 break;
             }
         }
 
         int ch;
         do {
-
-            System.out.println("1.) Signaler une indisponibilité");
-            System.out.println("2.) Voir Historiques");
-            System.out.println("0.) Se deconnecter");
-            System.out.print("\nFaites un choix : ");
-            ch = sc.nextInt();
-
+            System.out.println("\n========= 👤 MENU =========");
+            System.out.println("1. 🚫 Signaler une indisponibilité");
+            System.out.println("2. 📅 Voir mes prochaines rotations");
+            System.out.println("0. 🔙 Deconnexion");
+            ch  = lireEntier("Faites un choix : ");
+            sc.nextLine();
             switch (ch) {
                 case 0:
-                    System.out.println("Deconnecter...");
+                    System.out.println("🔙 Deconnecter...");
                     break;
 
                 case 1:
-                    System.out.print("Entrez la date d'indisponibilité (aaaa-mm-jj) : ");
-                    String dateStr = sc.next();
-                    LocalDate indispo = LocalDate.parse(dateStr);
-                    System.out.print("Entrez le motif de ton indisponibilité : ");
-                    sc.next();
-                    String motif = sc.nextLine();
-                    connected.getFirst().signalerIndisponibilite(motif,agentID, indispo,admin);
-                    System.out.println("Indisponibilité enregistrée avec succès.");
-                    this.pause();
-                    break;
+
+                    System.out.print("📆 Entrez la date d'indisponibilité (aaaa-mm-jj) : ");
+                    try {
+                        LocalDate date = LocalDate.parse(sc.nextLine());
+                        System.out.print("✍️ Motif : ");
+                        String motif = sc.nextLine();
+                        connected.getFirst().signalerIndisponibiliteEtReplanifier(motif,agentID, date);
+                    } catch (Exception e) {
+                        break;
+                    }
                 case 2:
-                    connected.get(0).voirHistorique(agentID,admin);
+                    connected.getFirst().voirHistorique(agentID,admin);
                     this.pause();
                     break;
                 default:
-                    System.out.println("Choix invalide. Veuillez réessayer.");
+                    System.out.println("❌ Choix invalide. Réessayez.\"");
             }
         } while (ch != 0);
 
+    }
+    public int lireEntier(String message) {
+        int valeur = -1;
+        boolean valide = false;
+
+        while (!valide) {
+            System.out.print(message);
+            try {
+                valeur = sc.nextInt();
+                valide = true;
+            } catch (InputMismatchException e) {
+                System.out.println("⚠️ Entrez un nombre valide.");
+                sc.next(); // nettoyer la mauvaise saisie
+            }
+        }
+        return valeur;
     }
     private void pause(){
         System.out.print("Appuyez sur Entrée pour continuer...");
